--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -225,6 +225,39 @@
     <Filter Include="UVaOJ\11700">
       <UniqueIdentifier>{77287876-968e-484d-8436-408eda2a207b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UVaOJ\11800">
+      <UniqueIdentifier>{a9629fc5-6ef2-4f7a-98d6-09c51dcf7e50}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\11900">
+      <UniqueIdentifier>{84a57492-f6fa-48a4-a81e-ba2524be6d86}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12000">
+      <UniqueIdentifier>{da447b2f-2d49-4df6-87d0-7a394a7b5f33}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12100">
+      <UniqueIdentifier>{23bc30a7-1ac1-4bce-829e-f95ab5c08a2e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12200">
+      <UniqueIdentifier>{cc6aaec9-dec5-43de-8d40-c54ee33a2d4c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12300">
+      <UniqueIdentifier>{511252e4-24ab-48d3-b484-be5b925e47ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12400">
+      <UniqueIdentifier>{f9711e30-0fc8-46bc-b02a-936b7cf50c35}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12500">
+      <UniqueIdentifier>{f51c7931-aba5-4a83-814c-2f305a532dce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12600">
+      <UniqueIdentifier>{ae76f27e-6481-4f6c-b960-d6f80cb13b8d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UVaOJ\12708">
+      <UniqueIdentifier>{bc3e4061-ca99-46fb-b6c1-ebdb82ae9a2a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Library\Mathematics">
+      <UniqueIdentifier>{722cfc6a-65c7-44ce-a817-0814a5836079}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UVaOJ\100.cpp">
@@ -1496,6 +1529,144 @@
     <ClCompile Include="UVaOJ\11799.cpp">
       <Filter>UVaOJ\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVaOJ\11805.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11830.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11839.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11849.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11850.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11854.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11875.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11877.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11878.cpp">
+      <Filter>UVaOJ\11800</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11900.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11917.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11933.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11934.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11936.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11942.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11946.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11984.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11988.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11991.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\11995.cpp">
+      <Filter>UVaOJ\11900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12015.cpp">
+      <Filter>UVaOJ\12000</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12149.cpp">
+      <Filter>UVaOJ\12100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12157.cpp">
+      <Filter>UVaOJ\12100</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12250.cpp">
+      <Filter>UVaOJ\12200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12279.cpp">
+      <Filter>UVaOJ\12200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12289.cpp">
+      <Filter>UVaOJ\12200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12372.cpp">
+      <Filter>UVaOJ\12300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12403.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12405.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12243.cpp">
+      <Filter>UVaOJ\12200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12455.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12459.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12463.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12468.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12478.cpp">
+      <Filter>UVaOJ\12400</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12502.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12503.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12527.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12531.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12554.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12577.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12578.cpp">
+      <Filter>UVaOJ\12500</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12602.cpp">
+      <Filter>UVaOJ\12600</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12626.cpp">
+      <Filter>UVaOJ\12600</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12646.cpp">
+      <Filter>UVaOJ\12600</Filter>
+    </ClCompile>
+    <ClCompile Include="UVaOJ\12708.cpp">
+      <Filter>UVaOJ\12708</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1503,6 +1674,9 @@
     </ClInclude>
     <ClInclude Include="Library\bits\stdc++.h">
       <Filter>Library</Filter>
+    </ClInclude>
+    <ClInclude Include="Library\primes.h">
+      <Filter>Library\Mathematics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
