--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1700,6 +1700,9 @@
     <ClCompile Include="UVa\10500\10523.cpp">
       <Filter>UVaOJ\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10066.cpp">
+      <Filter>UVaOJ\10000\10060</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
