--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1703,6 +1703,9 @@
     <ClCompile Include="UVa\10000\10066.cpp">
       <Filter>UVaOJ\10000\10060</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10192.cpp">
+      <Filter>UVaOJ\10100\10190</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
