--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1709,6 +1709,9 @@
     <ClCompile Include="UVa\10400\10405.cpp">
       <Filter>UVaOJ\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10453.cpp">
+      <Filter>UVaOJ\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
