--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1721,6 +1721,9 @@
     <ClCompile Include="UVa\11100\11151.cpp">
       <Filter>UVaOJ\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\531.cpp">
+      <Filter>UVaOJ\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
