--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1724,6 +1724,9 @@
     <ClCompile Include="UVa\500\531.cpp">
       <Filter>UVaOJ\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\231.cpp">
+      <Filter>UVaOJ\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
