--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1733,6 +1733,9 @@
     <ClCompile Include="UVa\400\497.cpp">
       <Filter>UVaOJ\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10534.cpp">
+      <Filter>UVaOJ\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
