Added Index class

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1753,6 +1753,9 @@
     <ClInclude Include="Library\dp_algs.h">
       <Filter>Library</Filter>
     </ClInclude>
+    <ClInclude Include="Library\util.h">
+      <Filter>Library</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="output.txt">
