--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2057,6 +2057,7 @@
     <ClInclude Include="Library\dp_algs.h" />
     <ClInclude Include="Library\header.h" />
     <ClInclude Include="Library\primes.h" />
+    <ClInclude Include="Library\util.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
