--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -1967,6 +1967,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="UVa\100\115.cpp" />
+    <ClCompile Include="UVa\100\119.cpp" />
     <ClCompile Include="UVa\10100\10183.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
