--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1742,6 +1742,9 @@
     <ClCompile Include="UVa\100\115.cpp">
       <Filter>UVaOJ\100\110</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\119.cpp">
+      <Filter>UVaOJ\100\110</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
